[package]
name = "mongodb_session"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-session = "0.7"
mongodb = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
chrono = "0.4.40"
